--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   align-items: center;
   width: 1020px;
   height: 89px;
-  margin: auto;
+  margin: 0;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #2d303a;
@@ -125,6 +125,7 @@ body {
 .slider-list {
   position: absolute;
   display: flex;
+  width: 100%;
   height: 600px;
   align-self: flex-end;
 }
@@ -204,7 +205,7 @@ body {
 }
 
 .phone {
-    position:relative;
+  position: relative;
   box-sizing: inherit;
   width: 240px;
   height: 483px;
@@ -399,8 +400,7 @@ body {
   scroll-margin-top: 90px;
 }
 
-.menu-item, 
-.portfolio-name {
+.menu-item, .portfolio-name {
   text-transform: capitalize;
 }
 
@@ -624,10 +624,10 @@ body {
 /* input-form */
 
 .quote-header {
-    width: inherit;
-    height: 209px;
-    background-color: #f06c64;
-    scroll-margin-top: 90px;
+  width: inherit;
+  height: 209px;
+  background-color: #f06c64;
+  scroll-margin-top: 90px;
 }
 
 .quote-container {
@@ -652,10 +652,10 @@ body {
 }
 
 .quote-main {
-    width: inherit;
-    height: 445px;
-    background-color: #f06c64;
-    border-bottom: 6px solid #ea676b;
+  width: inherit;
+  height: 445px;
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
 }
 
 .quote-main-container {
@@ -691,16 +691,16 @@ body {
 }
 
 .submit-button {
-    width: 136px;
-    height: 38px;
-    margin: 8px;
-    font-size: 1.4em;
-    font-weight: bold;
-    color: #886A30;
-    background-color: #FBC65F;
-    border: none;
-    border-radius: 5px;
-    text-transform: uppercase;
+  width: 136px;
+  height: 38px;
+  margin: 8px;
+  font-size: 1.4em;
+  font-weight: bold;
+  color: #886A30;
+  background-color: #FBC65F;
+  border: none;
+  border-radius: 5px;
+  text-transform: uppercase;
 }
 
 .submit-button:hover {
@@ -872,199 +872,254 @@ body {
 }
 
 @media only screen and (max-width: 1019px) {
-    body {
-        width: 768px;
-    }
-
-    .header {
-        width: 768px;
-    }
-
-    .slider {
-        height: 542px;
-    }
-
-    .slider-list {
-        height: 542px;
-    }
-
-    .slider-wrapper {
-        width: 768px;
-        height: inherit;
-    }
-
-    #phone-vertical-slide1 {
-        top: 55px;
-        right: 53px;
-        transform: scale(0.75);
-    }
-
-    #phone-horizontal-slide1 {
-        top: 55px;
-        right: 168px;
-        transform: scale(0.75) rotate(90deg);
-    }
-
-    #phone-central {
-        top: 49px;
-        transform: scale(0.8);
-    }
-
-    #phone-small-left {
-        top: 47px;
-        left: 41px;
-    }
-
-    #phone-small-right {
-        top: 47px;
-        right: 43px;
-    }
-
-    .small:not(.screen) {
-        transform: scale(0.48);
-    }
-
-    .layout-3-column {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-    }
-
-    .services {
-        height: 675px;
-    }
-
-    .portfolio {
-        height: 230px;
-    }
-
-    .portfolio-header {
-        width: 727px;
-        height: 180px;
-        margin-left: 41px;
-    }
-
-    .portfolio-header-text {
-        width: 695px;
-        height: 60px;
-    }
-
-    .gallery {
-        height: 871px;
-    }
-
-    .layout-4-columns {
-        width: 688px;
-        height: 782px;
-    }
-
-    .gallery-image {
-        width: 216px;
-        height: 183px;
-        margin: 5px;
-        padding: 5px;
-        overflow: hidden;
-    }
-
-    .about-us {
-        height: 669px;
-        border-bottom: 5px solid #ffffff;
-        background-color: #f2f2f2;
-        scroll-margin-top: 90px;
-    }
-
-    .about-us-content h {
-        height: 40px;
-    }
-
-    .about-us-content p {
-        height: 114px;
-        padding-top: 14px;
-    }
-
-    .about-us-info {
-        width: 219px;
-    }
-
-        .about-us-info .portrait {
-            width: 219px;
-            height: 219px;
-        }
-
-            .about-us-info .portrait img {
-                width: 219px;
-                height: 219px;
-            }
-
-        .about-us-info .about-us-text {
-            width: 219px;
-            height: 70px;
-        }
-
-        .about-us-info .about-us-contact {
-            padding-top: 5px;
-        }
-
-    .quote-header {
-        width: 768px;
-        height: 214px;
-    }
-
-    .quote-container {
-        height: 214px;
-        padding: 53px 40px 0 42px;
-    }
-
-        .quote-container h1 {
-            width: 217px;
-            height: 40px;
-        }
-
-        .quote-container p {
-            padding-top: 14px;
-            width: 707px;
-            height: 110px;
-        }
-
-    .quote-main-container {
-        grid-template-columns: 490px 328px;
-    }
-
-    .input-form {
-        width: 442px;
-        height: 38px;
-        margin: 6px;
-    }
-
-    #describe {
-        width: 442px;
-    }
-
-    .quote-contact-info {
-        padding-left: 19px;
-        width: 240px;
-    }
-
-    .contact-info-text {
-        width: 221px;
-        height: 150px;
-    }
-
-    .quote-contact {
-        padding-top: 0;
-    }
+  body {
+    width: 768px;
+  }
+  .header {
+    width: 768px;
+  }
+  .slider {
+    height: 542px;
+  }
+  .slider-list {
+    height: 542px;
+  }
+  .slider-wrapper {
+    width: 768px;
+    height: inherit;
+  }
+  #slide2 {
+    grid-template-columns: 1fr 215px 1fr;
+  }
+  #phone-vertical-slide1 {
+    top: 55px;
+    right: 53px;
+    transform: scale(0.75);
+  }
+  #phone-horizontal-slide1 {
+    top: 55px;
+    right: 168px;
+    transform: scale(0.75) rotate(90deg);
+  }
+  #phone-central {
+    top: 49px;
+    transform: scale(0.8);
+  }
+  #phone-small-left {
+    top: 47px;
+    left: 41px;
+  }
+  #phone-small-right {
+    top: 47px;
+  }
+  .small:not(.screen) {
+    transform: scale(0.48);
+  }
+  .layout-3-column {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .services {
+    height: 675px;
+  }
+  .portfolio {
+    height: 230px;
+  }
+  .portfolio-header {
+    width: 727px;
+    height: 180px;
+    margin-left: 41px;
+  }
+  .portfolio-header-text {
+    width: 695px;
+    height: 60px;
+  }
+  .gallery {
+    height: 871px;
+  }
+  .layout-4-columns {
+    width: 688px;
+    height: 782px;
+  }
+  .gallery-image {
+    width: 216px;
+    height: 183px;
+    margin: 5px;
+    padding: 5px;
+  }
+  .about-us {
+    height: 669px;
+    border-bottom: 5px solid #ffffff;
+    background-color: #f2f2f2;
+    scroll-margin-top: 90px;
+  }
+  .about-us-content h {
+    height: 40px;
+  }
+  .about-us-content p {
+    height: 114px;
+    padding-top: 14px;
+  }
+  .about-us-info {
+    width: 219px;
+  }
+  .about-us-info .portrait {
+    width: 219px;
+    height: 219px;
+  }
+  .about-us-info .portrait img {
+    width: 219px;
+    height: 219px;
+  }
+  .about-us-info .about-us-text {
+    width: 219px;
+    height: 70px;
+  }
+  .about-us-info .about-us-contact {
+    padding-top: 5px;
+  }
+  .quote-header {
+    width: 768px;
+    height: 214px;
+  }
+  .quote-container {
+    height: 214px;
+    padding: 53px 40px 0 42px;
+  }
+  .quote-container h1 {
+    width: 217px;
+    height: 40px;
+  }
+  .quote-container p {
+    padding-top: 14px;
+    width: 707px;
+    height: 110px;
+  }
+  .quote-main-container {
+    grid-template-columns: 490px 328px;
+  }
+  .input-form {
+    width: 442px;
+    height: 38px;
+    margin: 6px;
+  }
+  #describe {
+    width: 442px;
+  }
+  .quote-contact-info {
+    padding-left: 19px;
+    width: 240px;
+  }
+  .contact-info-text {
+    width: 221px;
+    height: 150px;
+  }
+  .quote-contact {
+    padding-top: 0;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-    body {
-        width: 375px;
-    }
-
-    .header {
-        width: 375px;
-    }
-
-    .header-logo {
-        margin-left: 0;
-        align-self: center;
-    }
+  body {
+    width: 375px;
+  }
+  .header {
+    width: 375px;
+    height: 71px;
+    border: none;
+  }
+  .header-logo {
+    margin-left: 0;
+    align-self: center;
+  }
+  .header .header-container {
+    justify-content: center;
+  }
+  .header .header-container nav {
+    display: none;
+  }
+  .slider {
+    padding-top: 71px;
+    height: 289px;
+  }
+  .arrow {
+    transform: scale(0.875);
+  }
+  .arrow-left {
+    margin-left: 0;
+  }
+  .arrow-right {
+    right: 0;
+  }
+  .slider-list {
+    height: 218px;
+  }
+  .slider-wrapper {
+    width: 100%;
+    height: 218px;
+    align-content: center;
+  }
+  #phone-vertical-slide1 {
+    top: 0;
+    right: 125px;
+    transform: scale(0.365);
+  }
+  #phone-horizontal-slide1 {
+    top: 5px;
+    right: 416px;
+    transform: scale(0.365) rotate(90deg);
+  }
+  #slide2 {
+    grid-template-columns: 30% 40% 30%;
+  }
+  .small:not(.screen) {
+    transform: scale(0.237);
+  }
+  #phone-central {
+    top: 0;
+    left: -40px;
+    transform: scale(0.39);
+  }
+  #phone-small-left {
+    top: 0;
+    left: 39px;
+  }
+  #phone-small-right {
+    top: 0;
+    left: -33px;
+  }
+  .services {
+    height: auto;
+  }
+  .service-information {
+    height: auto;
+    padding-top: 0;
+    padding-left: 32px;
+  }
+  #service-header {
+    width: 314px;
+    height: 36px;
+  }
+  #service-content {
+    width: 314px;
+    height: 214px;
+  }
+  .layout-3-column {
+    grid-template-columns: none;
+  }
+  .portfolio-header-text {
+    margin: 0;
+    width: 375px;
+  }
+  .layout-4-columns {
+    margin: 0;
+    width: 375px;
+    height: 844px;
+  }
+  .gallery-image {
+    width: 151px;
+    height: 128px;
+    margin: 5px;
+    padding: 5px;
+  }
 }
