--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ body {
   height: 20px;
 }
 
+#burger-menu {
+    background-image: url(./assets/image/header/burger-menu-icon.svg);
+    display: none;
+}
+
 .nav-main {
   font-size: 1.2em;
   font-weight: 700;
@@ -512,6 +517,8 @@ body {
 
 .gallery-image img {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .about-us {
@@ -942,6 +949,7 @@ body {
     margin: 5px;
     padding: 5px;
   }
+
   .about-us {
     height: 669px;
     border-bottom: 5px solid #ffffff;
@@ -1015,6 +1023,7 @@ body {
   }
 }
 
+/*~~~~~~~~~~~~~~~~~~ Mobile size ~~~~~~~~~~~~~~~~~~~~~~*/
 @media only screen and (max-width: 767px) {
   body {
     width: 375px;
@@ -1025,19 +1034,72 @@ body {
     border: none;
   }
   .header-logo {
+      position:relative;
+      z-index: 10;
     margin-left: 0;
     align-self: center;
   }
   .header .header-container {
     justify-content: center;
   }
-  .header .header-container nav {
-    display: none;
-  }
-  .slider {
-    padding-top: 71px;
-    height: 289px;
-  }
+
+    #navigation {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        width: 278px;
+        height: 100vh;
+        background-color: #2d303a;
+        box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
+        transition: transform 1s ease-in;
+    }
+
+    #navigation {
+        height: 71px;
+    }
+
+
+        .header-navigation {
+        grid-template-columns: none;
+        height: 258px;
+        margin: auto 0 auto 71px;
+    }
+
+        .header-navigation .navigation-menu {
+            width: 205px;
+            height: 30px;
+        }
+
+        .nav-main {
+            position: absolute;
+            font-size: 2.4em;
+            line-height: 29px;
+            letter-spacing: -0.035em;
+        }
+
+    .header-navigation li::before {
+        display: none;
+    }
+
+        #burger-menu {
+            position: absolute;
+            left: 20px;
+            z-index: 10;
+            display: inline-block;
+            width: 25px;
+            height: 20px;
+            transition: transform 0.5s;
+        }
+
+    #burger-menu:hover {
+        cursor: pointer;
+    }
+
+    .slider {
+        padding-top: 71px;
+        height: 289px;
+    }
   .arrow {
     transform: scale(0.875);
   }
@@ -1125,6 +1187,7 @@ body {
     margin: 0;
     width: 375px;
     height: 844px;
+    
   }
   .gallery-image {
     width: 151px;
