--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   border-bottom: 6px solid #323746;
 }
 
-.header .header-container {
+.header-container {
   display: flex;
   box-sizing: inherit;
   justify-content: space-between;
@@ -46,15 +46,15 @@ body {
   padding-left: 0;
 }
 
-.header-navigation .navigation-menu {
+.navigation-menu {
   box-sizing: inherit;
   width: auto;
   height: 20px;
 }
 
 #burger-menu {
-    background-image: url(./assets/image/header/burger-menu-icon.svg);
-    display: none;
+  background-image: url(./assets/image/header/burger-menu-icon.svg);
+  display: none;
 }
 
 .nav-main {
@@ -442,7 +442,7 @@ body {
   overflow: hidden;
 }
 
-.portfolio .portfolio-navigation-cotainer {
+.portfolio-navigation-cotainer {
   height: 36px;
   padding-top: 5px;
 }
@@ -571,13 +571,13 @@ body {
   width: 300px;
 }
 
-.about-us-info .portrait {
+.portrait {
   width: 300px;
   height: 300px;
   overflow: hidden;
 }
 
-.about-us-info .about-us-name {
+.about-us-name {
   height: 37px;
   padding-top: 15px;
   font-size: 1.8em;
@@ -588,7 +588,7 @@ body {
   overflow: hidden;
 }
 
-.about-us-info .about-us-text {
+.about-us-text {
   height: 50px;
   padding-top: 9px;
   font-size: 1.2em;
@@ -599,7 +599,7 @@ body {
   overflow: hidden;
 }
 
-.about-us-info .about-us-contact {
+.about-us-contact {
   display: flex;
   justify-content: space-between;
   width: 152px;
@@ -615,7 +615,7 @@ body {
   border: 1px solid #666d89;
 }
 
-.about-container-icon .about-us-icon {
+.about-us-icon {
   width: 17px;
   height: 17px;
   margin-top: 4px;
@@ -747,7 +747,7 @@ body {
   height: 21px;
 }
 
-.quote-contact-data .contact-img {
+.contact-img {
   width: auto;
   height: auto;
 }
@@ -873,6 +873,8 @@ body {
   color: #f06c64;
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~ Tab size ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 @media only screen and (max-width: 1019px) {
   body {
     width: 768px;
@@ -949,7 +951,6 @@ body {
     margin: 5px;
     padding: 5px;
   }
-
   .about-us {
     height: 669px;
     border-bottom: 5px solid #ffffff;
@@ -966,19 +967,19 @@ body {
   .about-us-info {
     width: 219px;
   }
-  .about-us-info .portrait {
+  .portrait {
     width: 219px;
     height: 219px;
   }
-  .about-us-info .portrait img {
+  .portrait img {
     width: 100%;
     height: 100%;
   }
-  .about-us-info .about-us-text {
+  .about-us-text {
     width: 219px;
     height: 70px;
   }
-  .about-us-info .about-us-contact {
+  .about-us-contact {
     padding-top: 5px;
   }
   .quote {
@@ -1024,6 +1025,7 @@ body {
 }
 
 /*~~~~~~~~~~~~~~~~~~ Mobile size ~~~~~~~~~~~~~~~~~~~~~~*/
+
 @media only screen and (max-width: 767px) {
   body {
     width: 375px;
@@ -1034,72 +1036,57 @@ body {
     border: none;
   }
   .header-logo {
-      position:relative;
-      z-index: 10;
+    position: relative;
+    z-index: 10;
     margin-left: 0;
     align-self: center;
   }
-  .header .header-container {
+  .header-container {
     justify-content: center;
   }
-
-    #navigation {
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        width: 278px;
-        height: 100vh;
-        background-color: #2d303a;
-        box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
-        transition: transform 1s ease-in;
-    }
-
-    #navigation {
-        height: 71px;
-    }
-
-
-        .header-navigation {
-        grid-template-columns: none;
-        height: 258px;
-        margin: auto 0 auto 71px;
-    }
-
-        .header-navigation .navigation-menu {
-            width: 205px;
-            height: 30px;
-        }
-
-        .nav-main {
-            position: absolute;
-            font-size: 2.4em;
-            line-height: 29px;
-            letter-spacing: -0.035em;
-        }
-
-    .header-navigation li::before {
-        display: none;
-    }
-
-        #burger-menu {
-            position: absolute;
-            left: 20px;
-            z-index: 10;
-            display: inline-block;
-            width: 25px;
-            height: 20px;
-            transition: transform 0.5s;
-        }
-
-    #burger-menu:hover {
-        cursor: pointer;
-    }
-
-    .slider {
-        padding-top: 71px;
-        height: 289px;
-    }
+  #navigation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 278px;
+    background-color: #2d303a;
+    transition: transform 1s ease-in;
+  }
+  .header-navigation {
+    grid-template-columns: none;
+    margin: auto 0 auto 71px;
+  }
+  .navigation-menu {
+    position: absolute;
+    display: none;
+    width: 205px;
+    height: 57px;
+  }
+  .nav-main {
+    position: absolute;
+    font-size: 2.4em;
+    line-height: 29px;
+    letter-spacing: -0.035em;
+  }
+  .header-navigation li::before {
+    display: none;
+  }
+  #burger-menu {
+    position: absolute;
+    left: 20px;
+    z-index: 10;
+    display: inline-block;
+    width: 25px;
+    height: 20px;
+    transition: transform 0.5s;
+  }
+  #burger-menu:hover {
+    cursor: pointer;
+  }
+  .slider {
+    padding-top: 71px;
+    height: 289px;
+  }
   .arrow {
     transform: scale(0.875);
   }
@@ -1165,18 +1152,15 @@ body {
   .layout-3-column {
     grid-template-columns: none;
   }
-
   .portfolio-header {
     width: 315px;
     height: 197px;
     padding-top: 42px;
   }
-
   .portfolio-name {
     top: 0;
     height: 40px;
   }
-  
   .portfolio-header-text {
     top: 0;
     margin: 14px 0 0 0;
@@ -1187,7 +1171,6 @@ body {
     margin: 0;
     width: 375px;
     height: 844px;
-    
   }
   .gallery-image {
     width: 151px;
@@ -1195,137 +1178,122 @@ body {
     margin: 5px;
     padding: 5px;
   }
-
   .about-us {
     height: auto;
     border-bottom: 9px solid #f2f2f2;
   }
-
   .about-us-content {
     top: 0;
     margin: 0 30px 0 30px;
     height: 321px;
   }
-
   .about-us-content h2 {
     padding-top: 33px;
     height: 73px;
   }
-
   .about-us-content p {
     width: 315px;
     height: 220px;
     margin-top: 14px;
     padding-top: 0;
   }
-
-  .about-us .layout-3-columns {
+  .layout-3-columns {
     top: 0;
     width: 314px;
     height: auto;
     margin-left: 30px;
     flex-wrap: wrap;
   }
-
   .about-us-info {
     width: 314px;
   }
-
-  .about-us-info .portrait {
+  .portrait {
     width: 314px;
     height: 314px;
   }
-
-  .about-us-info .portrait img{
+  .portrait img {
     width: 100%;
     height: 100%;
   }
-
-  .about-us-info .about-us-name {
+  .about-us-name {
     height: 15px;
     margin-top: 18px;
     padding: 0;
     line-height: 18px;
   }
-
-  .about-us-info .about-us-text {
+  .about-us-text {
     width: 314px;
     height: 47px;
     padding: 0;
     margin-top: 5px;
   }
-
-  .about-us-info .about-us-contact {
+  .about-us-contact {
     margin: 9px 0 34px 0;
     padding: 0;
   }
-
   .quote {
     width: 375px;
     height: auto;
     border: none;
   }
-
   .quote-container {
     width: 314px;
     height: 331px;
     margin: 0 0 0 30px;
     padding: 44px 0 0 0;
   }
-
   .quote-container h1 {
     width: 314px;
   }
-
   .quote-container p {
     width: 314px;
     height: 214px;
   }
-
   .quote-main-container {
     grid-template-columns: none;
     margin-top: 0;
   }
-
   .form {
     width: 327px;
     margin-left: 24px;
     padding: 0;
   }
-
   .input-form {
     width: 315px;
   }
-
   #describe {
     width: 315px;
   }
-
   .submit-button {
     width: 315px;
     height: 50px;
   }
-
   .quote-contact-info {
     width: 315px;
     height: auto;
     margin: 24px 0 0 30px;
     padding: 0;
   }
-
   .contact-info-head {
     width: 100%;
     height: 15px;
     line-height: 18px;
   }
-
   .contact-info-text {
     width: 100%;
     height: 94px;
   }
-
   .quote-contact {
     margin-top: 5px;
     margin-bottom: 42px;
+  }
+  .navigation-active {
+    display: flex;
+    height: 100vh;
+    box-shadow: '0px - 40px 20px rgba(0, 0, 0, 0.4)';
+  }
+  .menu-active {
+    position: static;
+    display: list-item;
   }
 }
